# colony-picker

./: .gitignore  data.csv  pyproject.toml
colony_picker/: ot2_template.py  picker.py
data/: ansi_colony_test_1.csv  ansi_lum_bf.csv  ansi_reference.csv  ansi_test.csv  ansi_test.tif  config.json  config_ansi.json  config_ansi_testing.json  config_sharpie.json  img1_small.csv  img2.csv  img3.csv  img4.csv  lum_test_uv.csv  n8_plate_1.csv  n8_plate_2.csv  plate_map.afdesign
data/20230322/: colony_data.csv  config.json  config.toml  ot2.py
data/ansis/: ansi_colony_test_1.csv  colony_data.csv  n8_plate_1.csv  n8_plate_2.csv  ot2.py
data/chemisolo/: calibration.tif  chemisolo_squareplate.json  colony_data.csv  dummy calibration.py  dummy.tif  ot2.py  template.py
data/chemisolo/images/: 2024.09.24_14.00.02.tif  2024.09.24_14.02.51.tif
data/webcam_test/: colony_data.csv  webcam_test.json
data/webcam_test2/: colony_data.csv  ot2.py  template.py  webcam_test.json
data/webcam_test3/: colony_data.csv  ot2.py  webcam_test.json
notebooks/: initial-experiments.ipynb  sorting-colonies.ipynb  webcam_test.ipynb
tests/: test_colony_picker.py
